# main-project-winners-inc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_and_test.sh  build_test_run.sh  test.sh  test_map.json
app/: APP.md  CMakeLists.txt  RobotSimulationMain.cpp  hello_mongo.cpp  main.cpp  map.json  simulatormain.cpp  testing.cpp  wx_robot_test.cpp
dependencies/: dependencies.cmake  get_cpm.cmake
docs/Spring2ActivityDiagram/: ActivityDiagram.puml
docs/design/: ARCHITECTURE.md  CLASSES.md  DESIGN.md  SEQUENCE.md  USER_INTERFACE.md  USE_CASES.md
docs/design/ClassDiagrams/: class_diagram.md  class_diagram.puml
docs/design/SequenceDiagrams/: SequenceDiagram_AccessingData.puml  SequenceDiagram_Alerts.puml  SequenceDiagram_CreatingSchedule.puml  SequenceDiagram_EditScheduling.puml  SequenceDiagram_ErrorHandling.puml  SequenceDiagram_MonitoringStatus.puml  SequenceDiagram_SchedulingTasks.puml  SequenceDiagram_ViewStatus.puml
docs/design/UseCases/: UseCase_AlertsAndErrors.puml  UseCase_ManageTasks.puml  UseCase_RobotAnalytics.puml  UseCase_RobotFunctions.puml
docs/notes/: REQUIREMENTS.md  Spring5_Contribution_StevenChen.md  Sprint0_Contribution_AriannaKightlinger.md  Sprint0_Contribution_AyushGarg.md  Sprint0_Contribution_Charlotte.md  Sprint0_Contribution_StevenChen.md  Sprint1_Contribution_AriannaKightlinger.md  Sprint1_Contribution_AyushGarg.md  Sprint1_Contribution_Charlotte.md  Sprint1_contribution_StevenChen.md  Sprint2_Contribution_AriannaKightlinger.md  Sprint2_Contribution_AyushGarg.md  Sprint2_Contribution_CharlotteBrand.md  Sprint2_Contribution_StevenChen.md  Sprint3_Contribution_AriannaKightlinger.md  Sprint3_Contribution_AyushGarg.md  Sprint3_Contribution_CharlotteBrand.md  Sprint3_Contribution_StevenChen.md  Sprint4_Contribution_AriannaKightlinger.md  Sprint4_Contribution_AyushGarg.md  Sprint4_Contribution_CharlotteBrand.md  Sprint4_contribution_StecenChen.md  Sprint5_Contribution_AriannaKightlinger.md  Sprint5_Contribution_AyushGarg.md  Sprint5_Contribution_CharlotteBrand.md  staffing.md
docs/user_guide/: USER_GUIDE.md
include/: INCLUDE.md
include/AlertDialog/: AlertDialog.hpp
include/AlertSystem/: alert_system.h
include/AnalyticService/: analytic_service.h
include/CleaningTask/: cleaningTask.h
include/LoginDialog/: LoginDialog.hpp
include/Robot/: Robot.h
include/RobotManagementFrame/: RobotManagementFrame.hpp
include/RobotMetrics/: robot_metrics.h
include/RobotSimulator/: RobotSimulator.hpp
include/Room/: Room.h
include/Schedular/: Schedular.hpp
include/Schedule/: schedule.h
include/Scheduler/: Scheduler.hpp
include/TaskScheduler/: TaskScheduler.h
include/adapter/: MongoDBAdapter.hpp
include/alert/: Alert.h
include/analytics/: analytics.h
include/area/: area.h
include/config/: ResourceConfig.hpp
include/location/: location.h
include/map/: map.h
include/map_panel/: map_panel.hpp
include/permission/: permission.h
include/robot_control/: robot_control_panel.hpp
include/role/: role.h
include/scheduler_panel/: scheduler_panel.hpp
include/user/: user.h
include/virtual_wall/: virtual_wall.h
include/zone/: zone.h
resources/: map.json
src/: AlertDialog.cpp  LoginDialog.cpp  MongoDBAdapter.cpp  Robot.cpp  RobotManagementFrame.cpp  RobotSimulator.cpp  Room.cpp  SRC.md  Schedular.cpp  Scheduler.cpp  TaskScheduler.cpp  alert.cpp  alert_system.cpp  analytic_service.cpp  analytics.cpp  cleaningTask.cpp  map.cpp  map.json  map_panel.cpp  permission.cpp  robot_control_panel.cpp  robot_metrics.cpp  role.cpp  schedule.cpp  scheduler_panel.cpp  user.cpp  virtual_wall.cpp
src/config/: ResourceConfig.cpp
tests/: CMakeLists.txt  TESTS.md  test_AlertSystem.cpp  test_map.json  test_mappingSystem.cpp  test_mongoDB.cpp  test_robotMetrics.cpp  test_schedulingSystem.cpp  test_simulation.cpp  test_task_scheduler.cpp
